# Defi-Data-Pipeline

./: .gitignore  README.md  docker-compose-airflow.yml  docker-compose.yaml  main.py  pyproject.toml
airflow/dags/: uniswap_pipeline.py
dashboard/: app.py
defi_dbt/: dbt_project.yml
defi_dbt/models/marts/: daily_swap_volume.sql  pool_volume.sql  schema.yml  token_volume.sql
defi_dbt/models/staging/: schema.yml  stg_uniswap_swaps.sql
scripts/: extract_uniswap_swaps.py  load_swaps_to_postgres.py  load_swaps_to_snowflake.py  transform_uniswap_swaps.py  upload_processed_to_s3.py  upload_raw_to_s3.py
snowflake/: create_tables.sql  load_raw_swaps.sql  setup.sql  storage_integration.sql
