[project]
name = "defi-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.27",
    "dbt-snowflake>=1.11.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "snowflake-connector-python>=4.6.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
]
